<resources>
    <string name="login_text">login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="select_language">Select Language</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="create_account">new user ? create an account</string>
    <string name="app_name">Pothole \nDiscoSafe</string>
    <string name="google_login">Sign in with Google</string>
    <string name="apple_login">Sign in with Apple</string>
    <string name="facebook_login">Sign in with Facebook</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="show_password">Show Password</string>
    <string name="verify">Verify</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="name">name</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="username">username</string>
    <string name="hauuit2252">hauuit2252</string>
    <string name="email">email</string>
    <string name="_22502412_gm_uit_edu_vn">22502412@gm.uit.edu.vn</string>
    <string name="password">password</string>
    <string name="show_pass">Show Password</string>
    <string name="confirm">Confirm</string>
    <string name="please_confirm_your_details">Please confirm your details</string>
    <string name="hi">Hi</string>
    <string name="close">Close</string>
    <string name="choose_your_profile_avatar">Choose your profile avatar</string>
    <string name="next">Next</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="enter_your_pass">Enter your password</string>
    <string name="your_email">Your email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_username">Your username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="your_name">Your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="log_out">Log out</string>
    <string name="remove_account">Remove account</string>
    <string name="log_out_account">Log out account</string>
    <string name="removeaccount">remove account</string>
    <string name="greater_than_icon">Greater than icon</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="more">More</string>
    <string name="dark_mode">Dark mode</string>
    <string name="push_notifications">Push notifications</string>
    <string name="languages">Languages</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="ngoc_hau">Ngoc Hau</string>
    <string name="settings">Settings</string>
    <string name="pothele_discosafe">POTHELE DISCOSAFE</string>
    <string name="Asset_Name">Asset Name</string>
    <string name="Attribute">Attribute</string>
    <string name="Start_Date">Start_Date</string>
    <string name="End_Date">End_Date</string>

    <string name="mapbox_access_token">sk.eyJ1IjoiaGF1dHJhbnVpdCIsImEiOiJjbTNiODBtdnUwdGZ1MmxzYWJ6Z2J5YnZuIn0.G2fK3RKmlNa12midITFaaA</string>
    <string name="system_services_update"><![CDATA[System & services update]]></string>
    <string name="default_web_client_id">44441641362-37jdra6d53qeeovjc10tbqes6plm5qhb.apps.googleusercontent.com</string>
    <string name="the_password">The password must be at least 8 characters long, contain no spaces, and include uppercase letters, numbers, and special characters.</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string name="set_route">Set Route</string>


</resources>
