<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Edit_Profile">
    <!-- Nút đóng -->
    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <!-- Chữ chào người dùng -->
    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnClose"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/hi"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Chữ yêu cầu xác nhận -->
    <TextView
        android:id="@+id/tvConfirmMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGreeting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Please edit your profile"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <!-- Hình đại diện -->
    <RelativeLayout
        android:id="@+id/avatarContainer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tvConfirmMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/doraemon" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btnEditAvatar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/edit_avatar" />
    </RelativeLayout>

    <!-- Các trường thông tin -->
    <LinearLayout
        android:id="@+id/detailprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/avatarContainer"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="32dp">

        <!-- Tên -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:paddingBottom="4dp" />

        <EditText
            android:id="@+id/edit_text_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Your full name"
            android:textColorHint="@android:color/darker_gray"
            android:padding="16dp"/>



        <!-- Tên đăng nhập -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:paddingBottom="4dp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your username"
            android:textColorHint="@android:color/darker_gray"
            android:padding="16dp"/>

        <!-- Email -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="4dp"
            android:text="@string/email"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="#2F2F2F"
            android:padding="8dp"
            android:text="@string/_22502412_gm_uit_edu_vn"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <!-- Nút xác nhận -->

    <Button
        android:id="@+id/btnSave"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="200dp"
        android:backgroundTint="#000000"
        android:paddingVertical="12dp"
        android:text="Save"
        android:fontFamily="@font/poppins_light_italic"
        android:textColor="@android:color/white"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:layout_below="@id/detailprofile"
        android:textStyle="bold" />



</RelativeLayout>
